scenarios/manifest/scenario1/bookclubwithoutistio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookclub
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: web
    spec:
      containers:
        - name: bookclub
          image: fasttrackistio/bookclub:1.0.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bookclub
  labels:
    app: bookclub
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: bookclub
